FIXING FLEX GAP

--- a/starter/09-Omnifood-Optimizations/css/queries.css
+++ b/starter/09-Omnifood-Optimizations/css/queries.css
@@ -128,13 +128,15 @@
 	}
 
 	.main-nav {
-		background-color: #fffffff7;
+		background-color: hsla(0, 0%, 100%, 0.9);
 		position: absolute;
 		top: 0;
 		left: 0;
 		width: 100%;
 		height: 100vh;
 		transform: translateX(100%);
+		-webkit-backdrop-filter: 5px;
+		backdrop-filter: blur(10px);
 
 		display: flex;
 		align-items: center;
@@ -299,3 +301,53 @@
 - Spacing system (px)
 2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128
 */
+
+/* FIXING SAFARI GRID GAP */
+.no-flexbox-gap .main-nav-list li:not(:last-child) {
+	margin-right: 4.8rem;
+}
+
+.no-flexbox-gap .list-item:not(:last-child) {
+	margin-bottom: 1.6rem;
+}
+
+.no-flexbox-gap .list-icon:not(:last-child) {
+	margin-right: 1.6rem;
+}
+
+.no-flexbox-gap .delivered-faces {
+	margin-right: 1.6rem;
+}
+
+.no-flexbox-gap .meal-attribute:not(:last-child) {
+	margin-bottom: 2rem;
+}
+
+.no-flexbox-gap .meal-icon {
+	margin-right: 1.6rem;
+}
+
+.no-flexbox-gap .footer-row div:not(:last-child) {
+	margin-right: 6.4rem;
+}
+
+.no-flexbox-gap .social-links li:not(:last-child) {
+	margin-right: 2.4rem;
+}
+
+.no-flexbox-gap .footer-nav li:not(:last-child) {
+	margin-bottom: 2.4rem;
+}
+
+@media (max-width: 75em) {
+	.no-flexbox-gap .main-nav-list li:not(:last-child) {
+		margin-right: 3.2rem;
+	}
+}
+
+@media (max-width: 59em) {
+	.no-flexbox-gap .main-nav-list li:not(:last-child) {
+		margin-right: 0;
+		margin-bottom: 4.8rem;
+	}
+}
